programs/tests/invalid_Programs/type-checker/no_main_function.kln
function test():integer
    1
